--- a/style3.css
+++ b/style3.css
@@ -244,6 +244,11 @@ main > h3 {
     border-radius: 20px;
     border: 2px #fff solid;
     box-shadow: #111 0px 0px 10px;
+    background-color: #ff3d75;
+}
+
+.main-sec:last-child {
+    background-color: #ffa13d;
 }
 
 footer {
