--- a/style3.css
+++ b/style3.css
@@ -191,12 +191,10 @@ main > h3 {
 
 .main-sec:first-child {
     background-image: url(img/furtill.jpg);
-    background-color: #ff3d75;
 }
 
 .main-sec:last-child {
     background-image: url(img/naranj.jpg);
-    background-color: #ffa13d;
 }
 
 .main-sec-flex {
@@ -246,6 +244,11 @@ main > h3 {
     border-radius: 20px;
     border: 2px #fff solid;
     box-shadow: #111 0px 0px 10px;
+    background-color: #ff8bac; /*#ff3d75*/
+}
+
+.main-sec:last-child img {
+    background-color: #ffa13d;
 }
 
 footer {
